# ic-certified-blockchain

./: Cargo.toml  README.md  canister_ids.json  dfx.json  ic_blockchain.did  ic_certified_blockchain.did  icb.sh  makefile  test.sh
cli/: .env  .env.example  cli.js  package-lock.json  package.json
src/: hash_tree.rs  main.rs
store/: package-lock.json  package.json  store.js
tests/: identity.pem  package-lock.json  package.json  test.js  tests.js
verify/: package-lock.json  package.json  verify.js
