[package]
name = "ic-certified-blockchain"
version = "0.1.0"
authors = ["John Plevyak <jplevyak@gmail.com>"]
edition = "2021"

[dependencies]
candid = "0.10"
hex = "0.4"
ic-certified-map = "0.4"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
ic-stable-structures = "0.7"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "^0.10"

[profile.release]
debug = false
lto = true
opt-level = 'z'
