[package]
name = "ic-certified-blockchain"
version = "0.1.0"
authors = ["John Plevyak <jplevyak@gmail.com>"]
edition = "2021"

[dependencies]
candid = "0.10"
hex = "0.4"
ic-certified-map = "0.4"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
ic-stable-structures = "0.7"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "^0.10"

[profile.release]
debug = false
lto = true
opt-level = 'z'

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.102"
candid = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
ic-agent = "0.46.2"
ic-certified-map = "0.4"
ic-certification = "3"
ic-certificate-verification = "3"
ic-verify-bls-signature = "0.6.0"
ic-utils = "0.46.2"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["full"] }
chrono = "0.4"
ic-cbor = "3.1.0"
